istio/request-routing-chuck.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chuck-joke-service-routing
spec:
  hosts:
    - chuck-joke-service
  http:
    - match:
      - uri:
          prefix: /
        headers:
          x-debug:
            exact: "true"
      route:
        - destination:
            host: chuck-joke-service
            subset: v1
            port:
              number: 8080
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: chuck-joke-service
            subset: v2
            port:
              number: 8080
      fault:
        delay:
          fixedDelay: 3s
          percentage:
            value: 100
