istio/request-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chuck-ui-default
spec:
  hosts:
    - "*"
  gateways:
    - chuck-gateway
  http:
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: chuck-ui
            subset: v1
            port:
              number: 3000
